updated the styling

--- a/src/Synonyms.css
+++ b/src/Synonyms.css
@@ -1,7 +1,5 @@
-section {
-  background-image: linear-gradient(to top, #e6e9f0 0%, #eef1f5 100%);
-  border-radius: 15px;
-  box-shadow: 0px 5px 15px rgba(0 0 0 / 10%);
-  margin: 20px 0;
-  padding: 30px;
+li {
+  list-style: none;
+  text-align: center;
+  font-style: italic;
 }
