--- a/src/SearchEngine.css
+++ b/src/SearchEngine.css
@@ -1,7 +1,20 @@
 section {
-  background-image: linear-gradient(to top, #e6e9f0 0%, #eef1f5 100%);
-  border-radius: 15px;
+  background-image: linear-gradient(
+    to top,
+    #f3e7e9 0%,
+    #e3eeff 99%,
+    #e3eeff 100%
+  );
+  border-radius: 6px;
   box-shadow: 0px 5px 15px rgba(0 0 0 / 10%);
-  margin: 20px 0;
+
+  margin: 30px auto;
   padding: 30px;
+  width: 1000px;
+}
+
+input {
+  width: 55%;
+  padding: 6px 4px;
+  border: 1px solid #ddd;
 }
